<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>de.raphaelmuesseler.financer</groupId>
    <artifactId>financer</artifactId>
    <packaging>pom</packaging>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <java.version>11</java.version>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <project.testing.localhost>false</project.testing.localhost>
        <project.testing.tags>unit, integration</project.testing.tags>
        <project.testing.arguments>
            --add-reads de.raphaelmuesseler.financer.shared=ALL-UNNAMED
            --add-opens de.raphaelmuesseler.financer.shared/de.raphaelmuesseler.financer.shared.model.db=ALL-UNNAMED
            --add-opens de.raphaelmuesseler.financer.client.javafx/de.raphaelmuesseler.financer.client.javafx.main=ALL-UNNAMED
            --add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
            --add-exports javafx.graphics/com.sun.javafx.css=org.controlsfx.controls
            --add-exports javafx.graphics/com.sun.javafx.scene=com.jfoenix
            --add-exports javafx.base/com.sun.javafx.binding=com.jfoenix
            --add-exports javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix
            --add-exports javafx.graphics/com.sun.javafx.stage=com.jfoenix
            --add-exports javafx.base/com.sun.javafx.event=com.jfoenix
        </project.testing.arguments>
        <project.testing.headless/>
    </properties>

    <profiles>
        <profile>
            <id>unit-tests</id>
            <properties>
                <project.testing.tags>unit</project.testing.tags>
            </properties>
        </profile>
        <profile>
            <id>integration-tests</id>
            <properties>
                <project.testing.tags>integration</project.testing.tags>
            </properties>
        </profile>
        <profile>
            <id>headless-testing</id>
            <properties>
                <project.testing.headless>
                    -Dtestfx.robot=glass -Dglass.platform=Monocle -Dmonocle.platform=Headless
                </project.testing.headless>
            </properties>
        </profile>
    </profiles>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jmod-plugin</artifactId>
                <version>3.0.0-alpha-2-SNAPSHOT</version>
                <dependencies>
                    <dependency>
                        <groupId>org.ow2.asm</groupId>
                        <artifactId>asm</artifactId>
                        <version>7.1</version>
                    </dependency>
                </dependencies>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jlink-plugin</artifactId>
                <version>3.0.0-alpha-1</version>
                <extensions>true</extensions>
                <configuration>
                    <noHeaderFiles>true</noHeaderFiles>
                    <noManPages>true</noManPages>
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>org.ow2.asm</groupId>
                        <artifactId>asm</artifactId>
                        <version>7.1</version>
                    </dependency>
                </dependencies>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>0.8.4</version>
                <configuration>
                    <destFile>${project.basedir}/../target/jacoco.exec</destFile>
                    <append>true</append>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>report</id>
                        <phase>test</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M3</version>
                <configuration>
                    <redirectTestOutputToFile>true</redirectTestOutputToFile>
                    <excludedGroups>skip</excludedGroups>
                    <groups>${project.testing.tags}</groups>
                    <argLine>
                        ${project.testing.arguments}
                        ${project.testing.headless}
                    </argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>3.0.0-M3</version>
                <executions>
                    <execution>
                        <id>integration-testing</id>
                        <goals>
                            <goal>integration-test</goal>
                        </goals>
                        <phase>test</phase>
                        <configuration>
                            <argLine>
                                ${project.testing.arguments}
                                ${project.testing.headless}
                            </argLine>
                            <groups>integration</groups>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <modules>
        <module>de.raphaelmuesseler.financer.client</module>
        <module>de.raphaelmuesseler.financer.client.javafx</module>
        <module>de.raphaelmuesseler.financer.server</module>
        <module>de.raphaelmuesseler.financer.shared</module>
        <module>de.raphaelmuesseler.financer.util</module>
    </modules>

    <dependencies>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>5.5.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>5.5.2</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
</project>
